# zabbix-websocket-bridge

./: .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  docker-compose.yml  pyproject.toml
.github/workflows/: container.yaml
src/zabbix_websocket_bridge/: __init__.py  jsonrpc.py  logging.py  main.py  models.py  websocket_client.py
tests/: test_jsonrpc.py  test_validation.py
